# apfelxx

./: .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  LICENSE  Makefile  README.md  circle.yml  test.cc
.circleci/: config.yml
.github/workflows/: codecov.yml  codeql-analysis.yml
doc/: Doxyfile  apfelxx_stack.odg  docco_cpp.json  docco_generate.sh  examples.dox  main.dox
doc/docs/: colorfactors.html  dgauss.html  distribution.html  evolinit.html  evolsetup.html  grid.html  hardoperator.html  splittings.html  subgrid.html
doc/src/: CCDIS.tex  CovarianceMatrix.tex  CreateDocs.sh  DrellYanTMD.tex  GPDs.tex  IntegralStucture.tex  MatchingConditions.tex  SIDISTMD.tex  TMDEvolution.tex  manual.tex
docs/: Doxyfile  examples.dox
docs/doxygen/: Doxyfile  Doxyfile.bak  examples.dox
docs/html/: README_8md.html  SIDISpol_8h.html  SIDISpol_8h_source.html  alphaqcd_8h.html  alphaqcd_8h_source.html  alphaqcdg_8h.html  alphaqcdg_8h_source.html  alphaqcdlambda_8h.html  alphaqcdlambda_8h_source.html  alphaqcdmsbarmass_8h.html  alphaqcdmsbarmass_8h_source.html  alphaqcdqed_8h.html  alphaqcdqed_8h_source.html  alphaqcdxi_8h.html  alphaqcdxi_8h_source.html  alphaqed_8h.html  alphaqed_8h_source.html  annotated.html  apfelxx_8h.html  apfelxx_8h_source.html  betaqcd_8h.html  betaqcd_8h_source.html  betaqcdqed_8h.html  betaqed_8h.html  (+1520 more)
inc/: colorfactors.hh  dgauss.hh  distset.hh  evolinit.hh  grid.hh  opset.hh  splittings.hh
pywrap/: ApfelPy_TMD_tests.ipynb  ApfelPy_example.ipynb  coupling_test.py  dglap_test.py  dglap_test_streamlined.py  distribution_test.py  gpd_test.py  integration_test.py  interpolation_test.py  pywrap.cc  pywrap.cxx  qgrid_test.py  structurefunction_cc_test.py  structurefunction_nc_pol_test.py  structurefunction_nc_test.py
resources/: astyle.sh  gource.sh
src/: CMakeLists.txt  LagrangeInterpolator.cc  alphaqcd.cc  coupling.cc  distribution.cc  distset.cc  evolinit.cc  evolsetup.cc  expression.cc  grid.cc  integrator.cc  interpolator.cc  lagrangeinterpolator.cc  matrix.cc  operator.cc  opset.cc  qgrid.cc  set.cc  splittings.cc  subgrid.cc  tools.cc  utils.cc
src/dis/: CMakeLists.txt  hqcoef.f  massivecoefficientfunctions.cc  massivezerocoefficientfunctions.cc  structurefunctionbuilder.cc  zeromasscoefficientfunctions.cc
src/evolution/: CMakeLists.txt  alphaqcd.cc  alphaqcdg.cc  alphaqcdlambda.cc  alphaqcdmsbarmass.cc  alphaqcdqed.cc  alphaqcdxi.cc  alphaqed.cc  betaqcd.cc  betaqcdqed.cc  betaqed.cc  dglapbuilder.cc  evolbasisplusminus.cc  evolutionbasisqcd.cc  evolutionbasisqcdqed.cc  gammam.cc  gbeta.cc  lhtoypdfs.cc  matchingbasisqcd.cc  matchingconditions.cc  matchingconditions_sl.cc  matchingconditions_sl_n3lo.f  matchingconditions_tl.cc  msbarmass.cc  splittingfunctions.cc  splittingfunctions_tl.cc  splittingfunctionspol_sl.cc  splittingfunctionspol_tl.cc  splittingfunctionstrans_sl.cc  splittingfunctionstrans_tl.cc  splittingfunctionsunp_sl.cc  splittingfunctionsunp_sl_qed.cc  splittingfunctionsunp_tl.cc
src/evolution_module/: CMakeLists.txt  alphaqcd.cc  dglap.cc  dglapbuilder.cc  dglapqcd.cc  gridalphaqcd.cc  structurefunctionbuilder.cc
src/gpds/: CMakeLists.txt  gpdbuilder.cc  gpdevolutionkernels.cc  gpdsplittingfunctionspol_sl.cc  gpdsplittingfunctionstrans_sl.cc  gpdsplittingfunctionsunp_sl.cc  operatorerbl.cc  operatorgpd.cc
src/gtmds/: gmatchingfunctions.cc  gtmdbuilder.cc
src/interface/: CMakeLists.txt  initialiseevolution.cc
src/kernel/: CMakeLists.txt  basismap.cc  convolutionmap.cc  dglap.cc  dglapnonlinear.cc  diagonalbasis.cc  distribution.cc  distributionfunction.cc  distributionoperator.cc  doubledistribution.cc  doubleexpression.cc  doubleobject.cc  doubleoperator.cc  expression.cc  grid.cc  hplog.f  integrator.cc  integrator2d.cc  interpolator.cc  lagrangeinterpolator.cc  matchedevolution.cc  matrix.cc  messages.cc  observable.cc  ode.cc  operator.cc  operatordistribution.cc  qgrid.cc  rotations.cc  set.cc  specialfunctions.cc  subgrid.cc  tabulateobject.cc  tools.cc
src/sidis/: Makefile  PtIncSIDIS.cxx  SIDIS.h
src/structurefunctions/: CMakeLists.txt  disbasis.cc  massivecoefficientfunctions.cc  massivecoefficientfunctionsunp_sl.cc  massivecoefficientfunctionsunp_sl_ACOT.cc  massivezerocoefficientfunctions.cc  massivezerocoefficientfunctionsunp_sl.cc  sidiscoefficientfunctionspol.cc  sidiscoefficientfunctionsunp.cc  structurefunctionbuilder.cc  structurefunctionbuilder_ACOT.cc  zeromasscoefficientfunctions.cc  zeromasscoefficientfunctions_tl.cc  zeromasscoefficientfunctionspol_sl.cc  zeromasscoefficientfunctionsunp_sl.cc  zeromasscoefficientfunctionsunp_tl.cc
src/tmds/: CMakeLists.txt  N3LOtoC.cc  djet.cc  doubleexponentialquadrature.cc  gammacs.cc  gammacusp.cc  gammaf.cc  gammak.cc  gammav.cc  hardfactors.cc  kcs.cc  logzeta.cc  matchingfunctions.cc  matchingfunctionsff.cc  matchingfunctionspdf.cc  mf_qg.cc  ogataquadrature.cc  tmdbuilder.cc  tmdcrosssections.cc  twobodyphasespace.cc
tests/: CMakeLists.txt  cache_test.cc  coupling_test.cc  dglap_test.cc  dglap_test_streamlined.cc  dglapqcd_test.cc  distribution_test.cc  doubledistribution_test.cc  doubleobjint_test.cc  expansion_test.cc  gpd_test.cc  grid_test.cc  integrator_test.cc  interpolation_test.cc  massiveCF_test.cc  memtest.py  msbarmass_test.cc  ogata_test.cc  operator_test.cc  polylog_test.cc  principal_value_test.cc  qgrid_test.cc  qgriddist_test.cc  set_test.cc  siaxsec_test.cc  sidis_test.cc  sidispol_test.cc  structurefunction_cc_test.cc  structurefunction_massive_test.cc  structurefunction_nc_pol_test.cc  structurefunction_nc_test.cc  structurefunction_test.cc  subgrid_test.cc  sum_rules_test.cc  test1.cc  tmd_test.cc  vectorisation_test.cc
tests/ACOT_tests/: CMakeLists.txt  compare_with_nCTEQ  compare_with_nCTEQ.cc  matplotlib_settings.py  plot_nCTEQ_apfel_comparison.py  tutorial.cc
tests/ACOT_tests/APFELxx_results/: NC_F2_ACOT.csv  NC_F2_SACOT-chi.csv  SACOT-chi_NLO.csv  SACOT-chi_all.csv  aSACOT-chi_NNLO.csv
tests/ACOT_tests/nCTEQ_results/: NC_F2_ACOT.csv  NC_F2_SACOT-chi.csv  SACOT-chi_CT18NLO.csv  SACOT-chi_all.csv  aSACOT-chi_CT18NNLO.csv
(+873 files in other folders)
